--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
-  "name": "Casper-Filippo",
-  "version": "0.9.4-f1"
+  "name": "blog.filippo.io",
+  "version": "0.9.4-f2",
+  "author": {
+    "name": "Filippo Valsorda",
+    "email": "noreply@example.com"
+  }
 }
