Add GitHub workflows

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog.filippo.io",
+  "name": "blog-filippo-io",
   "version": "0.9.4-f2",
   "author": {
     "name": "Filippo Valsorda",
