--- a/.github/workflows/deploy-theme.yml
+++ b/.github/workflows/deploy-theme.yml
@@ -4,6 +4,13 @@ on:
     branches:	
       - master
 jobs:
+  gscan:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - run: |
+          npm install -g gscan
+          gscan .
   deploy:
     runs-on: ubuntu-18.04
     steps:
