--- a/.github/workflows/deploy-theme.yml
+++ b/.github/workflows/deploy-theme.yml
@@ -8,9 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - run: |
-          npm install -g gscan
-          gscan .
+      - run: npm install -g gscan
+      - run: gscan .
   deploy:
     runs-on: ubuntu-18.04
     steps:
